2. Navigation Drawer Added    Different way <fragment> as FragmentContainerView

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,5 +33,8 @@
             app:popExitAnim="@anim/slide_out_left"
             app:popUpTo="@id/firstFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="number"
+            app:argType="integer" />
     </fragment>
 </navigation>
